--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview --port $PORT",
-    "proxy": "http://localhost:5000",
+    "proxy": "http://localhost:5000"
 
   },
   "dependencies": {
