Ensure Vite binds to the correct port

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview --port $PORT",
+    "preview": "vite preview",
     "proxy": "http://localhost:5000"
-
+    
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.1",
